@@ -1,3 +1,9 @@
+1998-11-12  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* gnome-support.m4 (vsnprintf): Remove easy-vsnprintf hack -- it
+	doesn't work for Solaris 2.5 binaries running on Solaris 2.6.
+	From Frederic Devernay <devernay@istar.fr>.
+
 1998-11-06  Raja R Harinath  <harinath@cs.umn.edu>
 
 	* gnome-support.m4: Fix stupid type (sterror_r -> strerror_r).
